--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-fastapi==0.111.0
-matplotlib==3.8.4
-numpy==1.25.0
-pandas==2.0.3
-pydantic==2.7.3
-scikit_learn==1.5.0
+fastapi
+matplotlib
+numpy
+pandas
+pydantic
+scikit_learn
 uvicorn
 pydantic-settings
